# wiki

./: .gitignore  .gitmodules  Cargo.toml  README.md  SUMMARY.md  astro.config.ts  biome.json  ideas.md  meta.md  other.md  package-lock.json  package.json  random.md  tsconfig.json  wrangler.toml
.github/: dependabot.yml
.obsidian/: graph.json  workspace
compant_culture/: company culture.md
company culture/: company culture.md
computer science/: DevOps.md  SRE.md  api.md  computer science.md  cool.md  email.md  event systems.md  git.md  graphics.md  iot.md  networking.md  open source.md  programming.md  rfcs.md  self hosting.md  tools.md
computer_science/: DevOps.md  SRE.md  algorithms.md  analytics.md  api.md  apps.md  architecture.md  backups.md  browsers.md  cio.md  compression.md  computer science.md  computer_science.md  computers.md  cool.md  crypto.md  cryptocurrencies.md  cryptography.md  data.md  data_science.md  data_structures.md  developer_experience.md  dns.md  email.md  event_system.md  fintech.md  games.md  hashing.md  index.md  macos.md  networking.md  observability.md  programming.md  rfcs.md  robotics.md  search_engines.md  self_hosting.md  serverless.md  services.md  storage.md  (+10 more)
design/: art.md  design.md  drawing.md  fonts.md  index.md
diy/: index.md
economics/: crypto.md  economics.md  finance.md  financial systems.md  fintech.md  index.md  investing.md  retirement.md  stocks.md  trading.md  wsb.md
environment/: environment.md
finance/: books.md  finance.md  financial systems.md  index funds.md  investing.md  stocks.md  wsb.md
(+297 files in other folders)
