[package]
name = "wiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"]}
warp = "0.3.2"
walkdir = "2.3.2"
pulldown-cmark = "0.9.1"
askama = "0.11.1"
